--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1,h2,h3,h4 {
 
 a {
   color: #000;
+  font-size: 12px;
 }
 
 .header {
@@ -37,9 +38,8 @@ a {
   font-size: 12px;
   line-height: 24px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 20px 20px 20px 30px;
+  padding: 20px 20px 50px 30px;
   width: 250px;
-  height: 350px;
   float: left;
 }
 
@@ -77,7 +77,7 @@ a {
 .center {
  text-align: center;
  display: block;
- padding: 0px 0px 50px 0px;
+ padding: 0px 0px 0px 0px;
 }
 
 .assignments {
