--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  padding: 0 0 0 0;
+  padding-bottom: 100px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
